--- a/css/styles.css
+++ b/css/styles.css
@@ -265,4 +265,10 @@ a.custom-card:hover {
   font-size: 20px;
 }
 
+#username{
+  color: white;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  transition: color 0.2s;
+}
 
