--- a/css/styles.css
+++ b/css/styles.css
@@ -271,4 +271,65 @@ a.custom-card:hover {
   font-size: 1rem;
   transition: color 0.2s;
 }
+#comment-form label {
+  font-weight: bold;
+}
+
+#comment {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#rating {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#btnSend {
+  background-color: #6f9fd1;
+  color: #fff;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#btnSend:hover {
+  background-color: #3987db;
+}
+
+#btnSend:focus {
+  outline: none;
+}
+
+.estiloimg {
+  display: flex;
+  justify-content: center;
+  flex-wrap:initial;
+}
+
+
+.estiloimg img {
+width: 25%;
+padding: 10px;
+}
+
+#infoProducto h2 {
+margin-top: 20px;
+}
+
+#comment-form {
+  margin-top: 20px;
+}
+
+#contenedor {
+  margin-top: 75px;
+}
+
 
